@@ -15,6 +15,11 @@ For change history for MOST, see most/docs/CHANGES.
 Changes since 6.0b1
 -----------------
 
+7/1/16
+    - Fix bug in cpf_default_callback() that sometimes resulted in plotting
+      voltage at different buses for different parts of the curve when the
+      bus was not explicitly specified with the 'cpf.plot.bus' option.
+
 6/23/16
     - Bad bus numbers no longer cause a fatal error (after reporting the
       bad bus numbers) in case_info().
